--- a/src/index.css
+++ b/src/index.css
@@ -5,6 +5,28 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-image: linear-gradient(to top, #a8edea 0%, #fed6e3 100%);
+  height: 100vh;
+}
+
+.col-md-5 {
+  margin-top: 200px !important;
+  background-image: linear-gradient(to top, #a8edea 0%, #fed6e3 100%);
+}
+
+button{
+  width: 100% !important;
+  background-color: rgb(32, 32, 42) !important;
+  border-color: white !important;
+  color: whitesmoke;
+  font-weight: bolder !important;
+}
+
+input{
+  width: 99% !important;
+ border-color: black !important;
+ border-width: 2.5px !important;
+  
 }
 
 code {
